@@ -2,6 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2015, PHP 5.5.25
 
+- Core:
+  . Fixed bug #68652 (segmentation fault in destructor). (Dmitry)
+
 - cURL:
   . Fixed bug #68739 (Missing break / control flow). (Laruence)
 
